@@ -1,4 +1,5 @@
 HEAD
+	+ Changes to allow provision as ADC
 	+ Add Ubuntu standard document root to apache virtual servers
 4.0.6
 	+ Fixed postinst script
